styles.css
/*** body ***
  Purpose:
  - Add style rules for the body of your webpage
  - This is useful if you want a rule to apply to EVERYTHING on your page
    - (Tip: You can always override these rules later in the stylesheet)
***/


body {
    /* Add a background color or image */ 
    background-color: var(--bg-color); /* see bottom of file for color variables */ 
    
    /* Customize the default size, color, and font for text*/ 
    font-size: 16px; color: var(--text-color); 
    font-family: Tahoma, sans-serif; 
    /* This tells the browser: "Try to use Tahoma, and if you can't find it, 
    use any sans-serif font." */ 

    /* Put space around the edges of the webpage */ 
    margin: 0;
    padding: 0 50px 50px 50px;
}


/*** Text ***
  Purpose:
  - Add style rules for headings (h1-6),
    paragraphs (p), links (a), and buttons
***/


h1 {
    color: rgb(15, 15, 85);
    font-size: 32px;
    font-family:'Times New Roman', Times, serif
   
}


h2 {
    color: rgb(15, 15, 85);
    font-size: 28px;
    font-family:'Times New Roman', Times, serif
   
}


h3 {
    color: rgb(41, 54, 139);
    font-size: 24px;
    font-family:'Times New Roman', Times, serif
   
}


h4 {
    color: rgb(61, 61, 125);
    font-size: 20px;
    font-family:'Times New Roman', Times, serif
   
}


p {
    color: rgb(9, 9, 47);
    font-size: 16px;
    font-family:'Times New Roman', Times, serif
   
}


a,
a * {
    color: var(--accent-color-dark);
    font-weight: bold;
}

a:hover {
    color: var(--accent-color-medium);
}


button {
    /* Example Style, replace with your own! */
    background-color: rgb(94, 77, 130);    /* button color */
    color: rgb(218, 219, 236);               /* text color */
    border: none;               /* hides the default border */
    padding: 5px 12px;          /* space between button's text and edge */
    border-radius: 5px;         /* curved edges instead of square */
    cursor: pointer;            /* makes the cursor change when over button */
}


button:hover {
    /* Make the button look different when the user hovers over it */
    background-color: rgb(66, 17, 145);
}


/*** header ***
  Purpose:
  - Add style rules for your website's header section
***/


.header { /* Example A: This styles elements with class="header" */
    text-align: center;
    padding: 20px;
}

.header-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 10px;
    margin-top: 80px; /* prevents navbar overlap */
    text-align: center;
}

.header-item {
    max-width: 90%;
}


/*** footer ***
  Purpose:
  - Add style rules for your website's footer section
***/


.footer { /* Example B: This styles elements with class="footer" */
    text-align: center;
    margin-top: 40px;
    padding: 20px;
    background-color: var(--accent-color-light);
    border-radius: 8px;
}


/*** Navigation bar (navbar) ***
  Purpose:
  - Add style rules for your website's navbar
***/

.navbar ul {
    list-style-type: none;
    overflow: hidden;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    background-color: var(--accent-color-darkest);
    padding: 20px 0;
    z-index: 1000;
    text-align: center;
    margin: 0;
}

.navbar ul li {
    display: inline-block;   /* puts buttons in a row */
    margin: 0 10px;
}

.navbar ul li a {
    text-decoration: none;
}

.navbar ul li a:hover {
    text-decoration: underline;
}




/*** About Section ***
  Purpose:
  - Add style rules for your website's About section
***/

#about-topic {
    margin-top: 40px;
    padding: 20px;
    background-color: var(--accent-color-light);
    border-radius: 10px;
    max-width: 800px;
    margin-left: auto;
    margin-right: auto;
}


/*** Links Section ***
  Purpose:
  - Add style rules for your website's Links section
***/

#recent-news {
    margin-top: 40px;
    padding: 20px;
    background-color: white;
    border-radius: 10px;
}

img {
    display: block;
    margin: 20px auto;
    border-radius: 10px;
}

/*** Dark Mode [PLACEHOLDER] ***/
.dark-mode {
    background-color: var(--bg-color-dark-mode);
    color: var(--text-color-dark-mode);
}

.dark-mode h1,
.dark-mode h2,
.dark-mode h3,
.dark-mode h4 {
    color: var(--accent-color-light);
}

.dark-mode a {
    color: var(--accent-color-green);
}

.dark-mode .navbar ul {
    background-color: black;
}

/*** Custom Colors (OPTIONAL) ***
  Purpose:
  - Use CSS variables to define custom colors for your website
  - To reference a color variable in your css, use var(--variable-name) in place of a color value
***/


:root {
    /* Light Mode */
    --bg-color: #a0adcf;
    --text-color: #231942;


    /* Dark Mode */
    --bg-color-dark-mode: #333b77;
    --text-color-dark-mode: #fff;


    /* Accent Colors */
    --accent-color-light: #d2cff5;
    --accent-color-medium: #684fb5;
    --accent-color-dark: #482f95;
    --accent-color-darkest: #231942;
    --accent-color-green: #28eb76;


    /* Error Colors */
    --error-color: #f8bbd0;
    --error-color-border: #e63946;
}


.container {
  text-align: center;
}

